- Add `Map<String, MovedPhaseShifterResult> phaseShifterResults` to `PreContingencyResult` and `PostContingencyResult`. - Bump `SecurityAnalysisResult` JSON version to `1.10`, with the `phaseShifterResults` tag gated on `>= 1.10`. - Share JSON read/write helpers in the new `PhaseShifterResultSerializer` utility. - Sort serialized entries by `transformerId` for deterministic output. - Guard constructors against null or empty maps by defaulting to `Collections.emptyMap()`. - Update the JSON fixture with the new version and `violationLocation`.
Signed-off-by: Riad Benradi <riad.benradi_externe@rte-france.com>